# margie

./: .readthedocs.yaml  README.md  pixi.toml  pyproject.toml
docs/: README.md  conf.py  index.rst  philosophy.rst  requirements.txt  technical.rst  todo.rst  usage.rst
margie-tool/: db.py  example.smk  main.py  myexample.smk
margie-tool/tests/: test_pipeline.py
tests/: test.py
